try fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ h1.heading.pink:after {
   width: 100%;
   height: 100%;
   padding: 4em 1em;
+  display: inline;
 }
 .swiper-slide {
   font-size: 18px;
